--- a/sass/main.sass
+++ b/sass/main.sass
@@ -599,6 +599,14 @@ body textarea:required:valid
 
 // ALWAYS END
 
+
+.top
+	height: 36px
+	background-color: #1f2b3a
+	background-image: url(img/top.png)
+	background-repeat: no-repeat
+	background-position: center
+
 @import "_media.sass"
 
 
