change media style

--- a/sass/fonts.sass
+++ b/sass/fonts.sass
@@ -1,3 +1,4 @@
+$output-bourbon-deprecation-warnings: false !default
 @import "bourbon";
 
 +font-face("PFCentroSlabProBold", "fonts/PFCentroSlabProBold/PFCentroSlabProBold", $file-formats: eot woff ttf)
