--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -1,56 +1,130 @@
 /*==========  Desktop First Method  ==========*/
 
 /* Large Devices, Wide Screens */
-@media only screen and (max-width : 1200px)
 
+@media only screen and (max-width : 1200px)
+	.main-mnu
+			display: none
+			float: right
+			min-width: 760px
+			text-align: center
+			background-color: #1C242C
+			border-bottom: #111821 4px solid
+			border-top: #232D3B 4px solid
+			position: absolute
+			left: -30px
+			z-index: 2
+			top: 40px
+			ul
+				li
+					display: inline-block
+					line-height: 0
+					padding: 0
+					&.active
+						a
+							background-color: #273646
+							text-decoration: none
+							font-family: "RalewayBold", $helvetica
+				a
+					display: block
+					line-height: 48px
+					padding: 0 20px
+					background-color: transparent
+					font-size: em(15px)
+					text-transform: uppercase
+					transition: all .5s ease
+					border-bottom: #222C36 1px solid
+					&:hover
+						background-color: #273646
+						text-decoration: none	
+
+@media only screen and (max-width : 1200px) and (min-width : 992px)
 	.main-footer
 		.main-mnu
 			left: 225px
 			position: relative
 			margin-right: -17px
 			margin-bottom: 25px
-
-	.triangles-container
-		.tc-item
-			margin-bottom: 15px
-			&:first-child
-				margin-left: -40px
 	.main-mnu
 		display: none
 		float: right
 		min-width: 760px
 		text-align: center
 		background-color: #1C242C
-		top: 10px
-		position: relative
 		border-bottom: #111821 4px solid
 		border-top: #232D3B 4px solid
 		position: absolute
-		left: -30px
+		left: 25px
 		z-index: 2
 		top: 40px
-		ul
-			li
-				display: inline-block
-				line-height: 0
-				padding: 0
-				&.active
-					a
-						background-color: #273646
-						text-decoration: none
-						font-family: "RalewayBold", $helvetica
-			a
-				display: block
-				line-height: 48px
-				padding: 0 20px
-				background-color: transparent
-				font-size: em(15px)
-				text-transform: uppercase
-				transition: all .5s ease
-				border-bottom: #222C36 1px solid
-				&:hover
-					background-color: #273646
-					text-decoration: none
+			
+	
+@media only screen and (max-width : 992px) and (min-width : 768px)
+	.main-mnu
+		display: none
+		float: right
+		min-width: 600px
+		text-align: center
+		background-color: #1C242C
+		border-bottom: #111821 4px solid
+		border-top: #232D3B 4px solid
+		position: absolute
+		left: -75px
+		z-index: 2
+		top: 33px
+	.main-footer
+		.main-mnu
+			left: 460px
+			position: relative
+			margin-right: -17px
+			margin-bottom: 25px
+
+
+@media only screen and (max-width : 768px) and (min-width : 576px)
+	.main-mnu
+		display: none
+		float: right
+		min-width: 417px
+		text-align: center
+		background-color: #1C242C
+		border-bottom: #111821 4px solid
+		border-top: #232D3B 4px solid
+		position: absolute
+		left: -163px
+		z-index: 2
+		top: 40px
+	.main-footer
+			.main-mnu
+				left: 300px
+				position: relative
+				margin-right: -17px
+				margin-bottom: 25px
+		
+@media only screen and (max-width : 576px) and (min-width : 480px)
+		.main-mnu
+			display: none
+			float: right
+			min-width: 350px
+			text-align: center
+			background-color: #1C242C
+			border-bottom: #111821 4px solid
+			border-top: #232D3B 4px solid
+			position: absolute
+			left: 20px
+			z-index: 2
+			top: 40px
+		.main-footer
+			.main-mnu
+				left: 300px
+				position: relative
+				margin-right: -17px
+				margin-bottom: 25px
+@media only screen and (max-width : 1200px)
+	.triangles-container
+		.tc-item
+			margin-bottom: 15px
+			&:first-child
+				margin-left: -40px
 	.phone
 		padding-right: 52px
 
@@ -67,21 +141,6 @@
 				padding-left: 0px
 /* Medium Devices, Desktops */
 @media only screen and (max-width : 992px)
-	.main-mnu
-		display: none
-		float: right
-		min-width: 600px
-		text-align: center
-		background-color: #1C242C
-		top: 10px
-		position: relative
-		border-bottom: #111821 4px solid
-		border-top: #232D3B 4px solid
-		position: absolute
-		left: -75px
-		z-index: 2
-		top: 40px
-
 	.s8-left
 		.section-head
 			h2
@@ -122,36 +181,9 @@
 			.info-item
 				margin: 40px 0
 				height: auto!important
-	.main-footer
-			.main-mnu
-				left: 460px
-				position: relative
-				margin-right: -17px
-				margin-bottom: 25px
 
 /* Small Devices, Tablets */
 @media only screen and (max-width : 768px)
-	.main-mnu
-		display: none
-		float: right
-		min-width: 400px
-		text-align: center
-		background-color: #1C242C
-		top: 10px
-		position: relative
-		border-bottom: #111821 4px solid
-		border-top: #232D3B 4px solid
-		position: absolute
-		left: -146px
-		z-index: 2
-		top: 40px
-	.main-footer
-			.main-mnu
-				left: 300px
-				position: relative
-				margin-right: -17px
-				margin-bottom: 25px
-
 	.s_dark
 		.section-bottom
 		   margin-top: 0px
@@ -216,20 +248,6 @@
 
 /* Extra Small Devices, Phones */
 @media only screen and (max-width : 580px)
-	.main-mnu
-		display: none
-		float: right
-		min-width: 300px
-		text-align: center
-		background-color: #1C242C
-		top: 10px
-		position: relative
-		border-bottom: #111821 4px solid
-		border-top: #232D3B 4px solid
-		position: absolute
-		left: 0px
-		z-index: 2
-		top: 40px
 	.s8-item
 		margin: 10px
 
@@ -239,18 +257,16 @@
 	.main-mnu
 		display: none
 		float: right
-		min-width: 150px
+		min-width: 240px
 		text-align: center
 		background-color: #1C242C
-		top: 10px
 		position: relative
 		border-bottom: #111821 4px solid
 		border-top: #232D3B 4px solid
 		position: absolute
-		left: 0
+		left: 12px
 		z-index: 2
 		top: 40px
-
 	.main-footer
 			.main-mnu
 				min-width: 300px
@@ -324,9 +340,6 @@
 
 /* Small Devices, Tablets */
 @media only screen and (min-width : 768px)
-
-	/* margin-top: 60px; */
-
 	/**/
 
 /* Medium Devices, Desktops */
