--- a/sass/main.sass
+++ b/sass/main.sass
@@ -1,3 +1,4 @@
+$output-bourbon-deprecation-warnings: false !default
 @import "bourbon"
 @import "_var.sass"
 @import "./libs/Magnific-Popup/magnific-popup.sass"
